Styles fixeds to avoid overflow on list page

--- a/src/app/components/list/list.component.css
+++ b/src/app/components/list/list.component.css
@@ -1,5 +1,6 @@
 .content {
   margin-top: 10vh;
+  overflow-y: hidden;
 }
 
 .cards-container {
